--- a/manifests/00-crd.yaml
+++ b/manifests/00-crd.yaml
@@ -104,7 +104,6 @@ spec:
                 type: string
               providerId:
                 type: string
-            
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -180,3 +179,291 @@ spec:
               type: string
             colorMode:
               type: integer
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: ringfencerules.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: RingfenceRule
+    plural: ringfencerules
+    shortNames:
+    - rin
+    singular: ringfencerule
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: appliances.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: Appliance
+    plural: appliances
+    shortNames:
+    - app
+    singular: appliance
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: sites.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: Site
+    plural: sites
+    shortNames:
+    - sit
+    singular: site
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: ippools.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: IpPool
+    plural: ippools
+    shortNames:
+    - ipp
+    singular: ippool
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: identityproviders.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: IdentityProvider
+    plural: identityproviders
+    shortNames:
+    - ide
+    singular: identityprovider
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: localusers.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: LocalUser
+    plural: localusers
+    shortNames:
+    - loc
+    singular: localuser
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: administrativeroles.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: AdministrativeRole
+    plural: administrativeroles
+    shortNames:
+    - adm
+    singular: administrativerole
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: mfaproviders.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: MfaProvider
+    plural: mfaproviders
+    shortNames:
+    - mfa
+    singular: mfaprovider
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: adminmfasettingss.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: AdminMfaSettings
+    plural: adminmfasettingss
+    shortNames:
+    - adi
+    singular: adminmfasettings
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: trustedcertificates.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: TrustedCertificate
+    plural: trustedcertificates
+    shortNames:
+    - tru
+    singular: trustedcertificate
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: criteriascriptss.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: CriteriaScripts
+    plural: criteriascriptss
+    shortNames:
+    - cri
+    singular: criteriascripts
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: devicescripts.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: DeviceScript
+    plural: devicescripts
+    shortNames:
+    - dev
+    singular: devicescript
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: entitlementscripts.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: EntitlementScript
+    plural: entitlementscripts
+    shortNames:
+    - enr
+    singular: entitlementscript
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: appliancecustomizations.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: ApplianceCustomization
+    plural: appliancecustomizations
+    shortNames:
+    - apt
+    singular: appliancecustomization
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: globalsettingss.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: GlobalSettings
+    plural: globalsettingss
+    shortNames:
+    - glo
+    singular: globalsettings
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: clientconnections.beta.appgate.com
+spec:
+  group: beta.appgate.com
+  names:
+    kind: ClientConnection
+    plural: clientconnections
+    shortNames:
+    - cli
+    singular: clientconnection
+  scope: Namespaced
+  versions:
+  - name: v1
+    served: true
+    storage: true
