--- a/manifests/01-role.yaml
+++ b/manifests/01-role.yaml
@@ -4,8 +4,30 @@ metadata:
   name: appgate-operator
 rules:
 - apiGroups: ["beta.appgate.com"]
-  resources: ["policies", "entitlements", "conditions"]
+  resources:
+  - policies
+  - entitlements
+  - conditions
+  - ringfencerules
+  - appliances
+  - sites
+  - ippools
+  - identityproviders
+  - localusers
+  - administrativeroles
+  - mfaproviders
+  - adminmfasettingss
+  - trustedcertificates
+  - criteriascriptss
+  - devicescripts
+  - entitlementscripts
+  - appliancecustomizations
+  - globalsettingss
+  - clientconnections
   verbs: ["get", "watch", "list"]
+- apiGroups: [""]
+  resources: ["configmaps","secrets"]
+  verbs: ["get", "watch", "list", "update", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
