Fix test tests.
Do not create factory if the attribute has any required field

--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -692,7 +692,7 @@ definitions:
               example:
                 - 80
                 - 1024-65535
-            monitor:
+            monitor_nullable:
               type: object
               nullable: true
               properties:
