Update spec with latest fixes

--- a/api_specs/v16/administrative_role.yml
+++ b/api_specs/v16/administrative_role.yml
@@ -255,6 +255,7 @@ definitions:
           - File
           - FailedAuthentication
           - AutoUpdate
+          - ClientConnection
       scope:
         type: object
         description: >-
