--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ name: Docker
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
       - main
@@ -35,7 +35,7 @@ jobs:
   v12:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
@@ -58,7 +58,7 @@ jobs:
   v13:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
@@ -81,7 +81,7 @@ jobs:
   v14:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
@@ -104,7 +104,7 @@ jobs:
   v15:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
@@ -127,7 +127,7 @@ jobs:
   v16:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
