--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,6 +26,7 @@ jobs:
           path: api_spec
 
   build:
+    needs: get-specs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
