--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,28 +17,35 @@ jobs:
       - name: Install wget tool
         run: |
           sudo apt-get update
-          sudo apt-get install wget unzip
+          sudo apt-get install wget
       - name: Get openspec API
         run: ./bin/get-open-spec.sh
         shell: bash
       - uses: actions/upload-artifact@v2
         with:
-          name: api_spec
-          path: api_spec
+          name: openspecs
+          path: /tmp/openspec-*.zip
 
   build:
     needs: get-specs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: openspecs
+          path: /tmp
+      - name: install unzip
+        run: |
+          sudo apt-get update
+          sudo apt-get install unzip
+      - name: Get openspec API
+        run: ./bin/unzip-open-spec.sh
+        shell: bash
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - uses: actions/download-artifact@v2
-        with:
-          name: api_specs
-          path: api_specs
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -59,6 +66,17 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: openspecs
+          path: /tmp
+      - name: install unzip
+        run: |
+          sudo apt-get update
+          sudo apt-get install unzip
+      - name: Get openspec API
+        run: ./bin/unzip-open-spec.sh
+        shell: bash
       - uses: actions/download-artifact@v2
         with:
           name: api_specs
@@ -88,6 +106,21 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
+          name: openspecs
+          path: /tmp
+      - name: install unzip
+        run: |
+          sudo apt-get update
+          sudo apt-get install unzip
+      - name: Get openspec API
+        run: ./bin/unzip-open-spec.sh
+        shell: bash
+      - uses: actions/download-artifact@v2
+        with:
+          name: api_specs
+          path: api_specs
+      - uses: actions/download-artifact@v2
+        with:
           name: api_specs
           path: api_specs
       - name: Login to GitHub Container Registry
@@ -113,6 +146,21 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: openspecs
+          path: /tmp
+      - name: install unzip
+        run: |
+          sudo apt-get update
+          sudo apt-get install unzip
+      - name: Get openspec API
+        run: ./bin/unzip-open-spec.sh
+        shell: bash
+      - uses: actions/download-artifact@v2
+        with:
+          name: api_specs
+          path: api_specs
       - uses: actions/download-artifact@v2
         with:
           name: api_specs
@@ -144,6 +192,21 @@ jobs:
         with:
           name: api_specs
           path: api_specs
+      - uses: actions/download-artifact@v2
+        with:
+          name: openspecs
+          path: /tmp
+      - name: install unzip
+        run: |
+          sudo apt-get update
+          sudo apt-get install unzip
+      - name: Get openspec API
+        run: ./bin/unzip-open-spec.sh
+        shell: bash
+      - uses: actions/download-artifact@v2
+        with:
+          name: api_specs
+          path: api_specs
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -167,6 +230,21 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: api_specs
+          path: api_specs
+      - uses: actions/download-artifact@v2
+        with:
+          name: openspecs
+          path: /tmp
+      - name: install unzip
+        run: |
+          sudo apt-get update
+          sudo apt-get install unzip
+      - name: Get openspec API
+        run: ./bin/unzip-open-spec.sh
+        shell: bash
       - uses: actions/download-artifact@v2
         with:
           name: api_specs
