--- a/k8s/chart/templates/deployment.yaml
+++ b/k8s/chart/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
 spec:
-  replicas: 1q
+  replicas: 1
   selector:
     matchLabels:
       {{- include "sdp-operator.selectorLabels" . | nindent 6 }}
