--- a/k8s/chart/templates/deployment.yaml
+++ b/k8s/chart/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "sdp-operator.fullname" . }}
+  namespace: {{ .Release.Namespae }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
 spec:
