--- a/k8s/chart/templates/rbac.yaml
+++ b/k8s/chart/templates/rbac.yaml
@@ -10,7 +10,7 @@ metadata:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "1"
 rules:
-  - apiGroups: [ "{{ .Values.operator.version }}.appgate.com"]
+  - apiGroups: ["{{ .Values.sdp.operator.version }}.appgate.com"]
     resources:
       - policies
       - entitlements
@@ -54,3 +54,4 @@ roleRef:
   kind: Role
   name: {{ include "sdp-operator.name" . }}
   apiGroup: rbac.authorization.k8s.io
+{{ end }}
